--- a/index.Rmd
+++ b/index.Rmd
@@ -69,7 +69,7 @@ The R Journal reaches a wide audience and has a thorough review process. It has 
 
 The R Journal accepts a variety of article topics including:
 
-- Packages: Details of contributed R packages that are available on CRAN or Bioconductor, that go beyond a package vignette. This includes providing the broader context, implementation details, applications or examples of use, with the purpose being to make the work relevant to a wider readership than only the package users. The paper might explain the novelty in implementation and use of R, introduce new data structures or general architectures that could be re-usable for other R projects. Note that both the paper and the code will be reviewed.
+- Packages: Details of contributed R packages that are available on CRAN or Bioconductor, that go beyond a package vignette. This includes providing the broader context, implementation details, applications or examples of use, with the purpose being to make the work relevant to a wider readership than only the package users. The paper might explain the novelty in implementation and use of R, introduce new data structures or general architectures that could be re-usable for other R projects. Note that both the paper and the code will be reviewed. See our [guidelines for papers about R packages](R_package_guidelines.html).
 - Reviews and proposals: surveying and discussing challenges and opportunities of potential importance for the broader R community, including proposals and proof-of-concept implementations.
 - Comparisons and benchmarking: of implementations in base-R and contributed packages with each other, and where relevant with implementations in other software systems.
 - Applications: demonstrating how new or existing techniques can be applied in an area of current interest using R, providing a fresh view of such analyses in R that is of benefit beyond the specific application.
