--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -12,7 +12,7 @@ d-article > * {
 }
 ```
 
-Articles for the R Journal should be no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere.
+Articles for the R Journal should be no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere. See our [guidelines for papers about R packages](R_package_guidelines.html).
 
 # Creating your article
 
