Added areas of interest for AEs

--- a/contribute.Rmd
+++ b/contribute.Rmd
@@ -25,3 +25,8 @@ We are keen to welcome new reviewers for the R Journal. If you would like to vol
 ## Associate Editors
 
 If you are interested in becoming an Associate Editor, you should directly [contact the managing editor](mailto:r-journal@r-project.org), along with a list of keywords that describe your expertise chosen from the list provided by `rjtools::keywords`. You should be experienced at developing R packages, and have significant prior experience in publishing scholarly work. Associate editors handle 2-4 articles per month, managing obtaining reviews, and writing a summary of the reviews for the Editor.
+
+We are particularly interested in recruiting Associate Editors with expertise in the following areas:
+
+* Biological and medical data
+* Spatial statistics and spatio-temporal modelling
