--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -12,7 +12,7 @@ d-article > * {
 }
 ```
 
-Articles for the R Journal should be no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere. See our [guidelines for papers about R packages](R_package_guidelines.html).
+Articles for the R Journal should be no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere. See our [guidelines for papers about R packages](R_package_guidelines.html). Papers must be fully reproducible, and all code and data must be made available (publicly if we publish your submission).
 
 # Creating your article
 
@@ -76,6 +76,7 @@ Your files will need to be uploaded in a zip file that should contain:
 You may have problems submitting if the size of your submission zip file is more than 10Mb. If you have large data files, you can make them available on an alternative site and provide the links in the paper.
 
 Please ensure that the submission can be reproduced in a timely manner, perhaps by reducing the example data size. If a submission cannot be reproduced in a reasonable time (*less than 10 minutes*), it will be sent back to you. For very computationally intensive methods, it is recommended that you include scripts to generate intermediate outputs, and that your main paper use these outputs rather than re-running the full computations. That way, we can see the full reproducible workflow, but the review process is not delayed by long computation times.
+
 
 If you have problems, please contact the Editor-in-Chief at <r-journal@r-project.org>.
 
