Republish to fix RJ-2024-029 Resolves https://github.com/rjournal/rjournal.github.io/issues/113

--- a/_articles/RJ-2024-029/alg/algone.tex
+++ b/_articles/RJ-2024-029/alg/algone.tex
@@ -22,5 +22,29 @@
 \begin{document}
 \nopagecolor
 \begin{algorithm}[H]
+	
+	\textbf{Input:} Time series $\{Y_t\}_{t=1}^n$, threshold $K_n$, window size $h=\lfloor n\epsilon\rfloor$
+	
+	\textbf{Output:} Estimated change-points $\widehat{\mathbf{k}}=(\hat{k}_1,\cdots,\hat{k}_{\hat{m}})$
+	
+	\textbf{Initialization:} SNCP($1,n,K_n,h$), $\widehat{\mathbf k}=\emptyset$
+	
+	\textbf{Procedure:} SNCP($s,e,K_n,h$)
+	
+	\eIf{$e-s+1<2h$}
+	{
+		stop
+	}{
+		$\hat{k}^*=\arg\max_{k=s,\cdots,e}T_{s,e}(k)$;
+		
+		\eIf{$T_{s,e}(\hat{k}^\ast)\leq K_n$}
+		{
+			stop
+		}{
+			$\widehat{\mathbf{k}}=\widehat{\mathbf{k}}\cup\hat{k}^\ast$;
+			
+			run SNCP($s,\hat{k}^\ast,K_n,h$) and SNCP($\hat{k}^\ast+1,e,K_n,h$);
+		}
+	}
 \end{algorithm}
 \end{document}
