--- a/_articles/RJ-2024-029/your-article.tex
+++ b/_articles/RJ-2024-029/your-article.tex
@@ -6,7 +6,7 @@
 
 \begin{abstract}
 	Time series segmentation aims to identify potential change-points in a sequence of temporally dependent data, so that the original sequence can be partitioned into several homogeneous subsequences. It is useful for modeling and predicting non-stationary time series and is widely applied in natural and social sciences. Existing segmentation methods primarily focus on only one type of parameter changes such as mean and variance, and they typically depend on smoothing parameters, which can be challenging to choose in practice. The self-normalization based change-point estimation framework SNCP by Zhao and others (2022), however, offers users more flexibility and convenience as it  allows for change-point estimation of different types of parameters (e.g. mean, variance, quantile and autocovariance) in a unified fashion.  In this paper, the R package SNSeg is introduced  to implement  SNCP for segmentation of univariate and multivariate time series.  An extension of SNCP, named SNHD, is also designed and implemented for change-point estimation in the mean vector of high-dimensional time series. The estimated change-points as well as segmented time series are available with graphical tools.  Detailed examples of SNSeg are given in simulations of multivariate autoregressive processes with change-points.
-
+\end{abstract}
 
 
 \section[Intro]{Introduction}\label{sec:intro}
