--- a/_articles/RJ-2024-029/RJwrapper.tex
+++ b/_articles/RJ-2024-029/RJwrapper.tex
@@ -5,49 +5,22 @@
 \usepackage{amsmath,amssymb,array}
 \usepackage{booktabs}
 
+%% load any required packages FOLLOWING this line
+\usepackage{algorithm2e}
+\usepackage{float}
+\RestyleAlgo{ruled}
+\usepackage{titlesec}
+\usepackage{xcolor}
+\usepackage{soul}
+\setstcolor{red}
+\usepackage{multirow}
+%\renewcommand{\thesection}{\arabic{section}}
+%\def\thesubsection{\arabic{section}.\arabic{subsection}}
+%\titleformat{\section}[hang]{\Large}{\thesection\ }{2pt}{}
+%\titleformat{\subsection}[hang]{\large}{\thesubsection\ }{2pt}{}
 
-% tightlist command for lists without linebreak
-\providecommand{\tightlist}{%
-  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-
-\usepackage{longtable}
-
-% Always define CSL refs as bib entries are contained in separate doc
-% Pandoc citation processing
-\newlength{\cslhangindent}
-\setlength{\cslhangindent}{1.5em}
-\newlength{\csllabelwidth}
-\setlength{\csllabelwidth}{3em}
-\newlength{\cslentryspacingunit} % times entry-spacing
-\setlength{\cslentryspacingunit}{\parskip}
-% for Pandoc 2.8 to 2.10.1
-\newenvironment{cslreferences}%
-  {}%
-  {\par}
-% For Pandoc 2.11+
-\newenvironment{CSLReferences}[2] % #1 hanging-ident, #2 entry spacing
- {% don't indent paragraphs
-  \setlength{\parindent}{0pt}
-  % turn on hanging indent if param 1 is 1
-  \ifodd #1
-  \let\oldpar\par
-  \def\par{\hangindent=\cslhangindent\oldpar}
-  \fi
-  % set entry spacing
-  \setlength{\parskip}{#2\cslentryspacingunit}
- }%
- {}
-\usepackage{calc}
-\newcommand{\CSLBlock}[1]{#1\hfill\break}
-\newcommand{\CSLLeftMargin}[1]{\parbox[t]{\csllabelwidth}{#1}}
-\newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{#1}\break}
-\newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
-
-
-\input{preamble.tex}
 
 \begin{document}
-
 
 %% do not edit, for illustration only
 \sectionhead{Contributed research article}
@@ -57,9 +30,9 @@
 \month{September}
 \setcounter{page}{46}
 
+%% replace RJtemplate with your article
 \begin{article}
-  \input{RJ-2024-029}
+  \input{your-article}
 \end{article}
-
 
 \end{document}
