Render all 2025-3 articles

--- a/_articles/RJ-2025-021/RJ-2025-021.Rmd
+++ b/_articles/RJ-2025-021/RJ-2025-021.Rmd
@@ -63,8 +63,8 @@ author:
 date: '2025-10-21'
 date_received: '2023-09-24'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 4
+  lastpage: 29
 volume: 17
 issue: 3
 slug: RJ-2025-021
