--- a/_articles/RJ-2025-024/RJ-2025-024.Rmd
+++ b/_articles/RJ-2025-024/RJ-2025-024.Rmd
@@ -31,8 +31,8 @@ author:
 date: '2025-10-21'
 date_received: '2024-10-01'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 69
+  lastpage: 88
 volume: 17
 issue: 3
 slug: RJ-2025-024
