--- a/_articles/RJ-2025-026/RJ-2025-026.Rmd
+++ b/_articles/RJ-2025-026/RJ-2025-026.Rmd
@@ -70,8 +70,8 @@ author:
 date: '2025-10-21'
 date_received: '2025-01-06'
 journal:
-  firstpage: ~
-  lastpage: ~
+  firstpage: 100
+  lastpage: 124
 volume: 17
 issue: 3
 slug: RJ-2025-026
