--- a/_articles/RJ-2025-027/RJ-2025-027.Rmd
+++ b/_articles/RJ-2025-027/RJ-2025-027.Rmd
@@ -28,8 +28,8 @@ author:
 date: '2025-10-21'
 date_received: '2025-02-12'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 140
+  lastpage: 163
 volume: 17
 issue: 3
 slug: RJ-2025-027
