--- a/_articles/RJ-2025-031/RJ-2025-031.Rmd
+++ b/_articles/RJ-2025-031/RJ-2025-031.Rmd
@@ -32,8 +32,8 @@ author:
 date: '2025-10-24'
 date_received: '2025-01-22'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 125
+  lastpage: 139
 volume: 17
 issue: 3
 slug: RJ-2025-031
