--- a/_news/RJ-2025-3-editorial/RJ-2025-3-editorial.Rmd
+++ b/_news/RJ-2025-3-editorial/RJ-2025-3-editorial.Rmd
@@ -16,6 +16,9 @@ header-includes: \usepackage{parskip}
 volume: 17
 issue: 3
 slug: RJ-2025-3-editorial
+journal:
+  lastpage: 3
+  firstpage: 3
 
 ---
 
