--- a/_issues/2025-3/2025-3.Rmd
+++ b/_issues/2025-3/2025-3.Rmd
@@ -30,8 +30,8 @@ articles:
 output:
   rjtools::rjournal_web_issue: default
   rjtools::rjournal_pdf_issue:
-    render_all: yes
-news: RJ-2025-3-
+    render_all: no
+news: ~ #RJ-2025-3-
 
 ---
 
