RJ-2025-021 plain text title/abstract

--- a/_articles/RJ-2025-021/RJ-2025-021.Rmd
+++ b/_articles/RJ-2025-021/RJ-2025-021.Rmd
@@ -1,5 +1,5 @@
 ---
-title: '**lsirm12pl**: An R Package for the Latent Space Item Response Model'
+title: 'lsirm12pl: An R Package for the Latent Space Item Response Model'
 abstract: |
   The item response model in latent space (LSIRM; Jeon et al. (2021))
   uncovers unobserved interactions between respondents and items in the
