--- a/_articles/RJ-2025-021/lsirm12pl.tex
+++ b/_articles/RJ-2025-021/lsirm12pl.tex
@@ -1,6 +1,6 @@
 % !TeX root = RJwrapper.tex
 
-\title{\pkg{lsirm12pl}: An R Package for the Latent Space Item Response Model}
+\title{lsirm12pl: An R Package for the Latent Space Item Response Model}
 \author{Dongyoung Go, Gwanghee Kim, Jina Park, Junyong Park, Minjeong Jeon, Ick Hoon Jin}
 
 \maketitle
