RJ-2025-021 fix acknowledgements formatting

--- a/_articles/RJ-2025-021/RJ-2025-021.Rmd
+++ b/_articles/RJ-2025-021/RJ-2025-021.Rmd
@@ -1589,11 +1589,11 @@ LSIRM in various practical scenarios.
 We thank the Editor, Associate Editor, and reviewers for their
 constructive comments. We also thank Dr. Won Chang for constructive
 comments on our work. This work was partially supported by the National
-Research Foundation of Korea \[grant number NRF-2020R1A2C1A01009881,
+Research Foundation of Korea [grant number NRF-2020R1A2C1A01009881,
 RS-2023-00217705, RS-2024-00333701; Basic Science Research Program
-awarded to IHJ\], \[grant number NRF-2025S1A5C3A0200632411; awarded to
-IHJ and MJ\], and the ICAN (ICT Challenge and Advanced Network of HRD)
-support program \[grant number RS-2023-00259934\], supervised by the
+awarded to IHJ], [grant number NRF-2025S1A5C3A0200632411; awarded to
+IHJ and MJ], and the ICAN (ICT Challenge and Advanced Network of HRD)
+support program [grant number RS-2023-00259934], supervised by the
 IITP (Institute of Information & Communications Technology Planning &
 Evaluation). Correspondence should be addressed to Ick Hoon Jin,
 Department of Applied Statistics, Department of Statistics and Data
