RJ-2025-022 fix author name

--- a/_articles/RJ-2025-022/RJ-2025-022.Rmd
+++ b/_articles/RJ-2025-022/RJ-2025-022.Rmd
@@ -21,7 +21,7 @@ author:
   address: Coventry, United Kingdom
   orcid: 0000-0002-1256-3375
   email: ht@heatherturner.net
-- name: Mitch O'Hara-Wild
+- name: Mitchell O'Hara-Wild
   affiliation: Monash University
   address: Melbourne, Australia
   orcid: 0000-0001-6729-7695
