--- a/_articles/RJ-2025-022/RJ-2025-022.tex
+++ b/_articles/RJ-2025-022/RJ-2025-022.tex
@@ -2,7 +2,7 @@
 \title{Converting LaTeX Legacy R Journal Articles into R Markdown Articles using texor and rebib}
 
 
-\author{by Abhishek Ulayil, Dianne Cook, Heather Turner, Mitch O'Hara-Wild, and Christophe Dervieux}
+\author{by Abhishek Ulayil, Dianne Cook, Heather Turner, Mitchell O'Hara-Wild, and Christophe Dervieux}
 
 \maketitle
 
@@ -519,7 +519,7 @@ Coventry, United Kingdom\\
 }
 
 \address{%
-Mitch O'Hara-Wild\\
+Mitchell O'Hara-Wild\\
 Monash University\\%
 Melbourne, Australia\\
 %
