RJ-2025-026 plain text title/abstract

--- a/_articles/RJ-2025-026/BesaluLangohrFranciscoGarciaGomez.tex
+++ b/_articles/RJ-2025-026/BesaluLangohrFranciscoGarciaGomez.tex
@@ -1,11 +1,11 @@
 % !TeX root = RJwrapper.tex
-\title{\code{R} package \pkg{GofCens}: Goodness-of-Fit Methods for Right-Censored Data}
+\title{R package GofCens: Goodness-of-Fit Methods for Right-Censored Data}
 \author{by Mireia Besal\'u, Klaus Langohr, Matilde Fransciso, Arnau Garcia-Fernández, and Guadalupe G\'omez Melis}
 
 \maketitle
 
 \begin{abstract}
-This paper presents the \code{R} package \pkg{GofCens}, which offers graphical tools and implements goodness-of-fit tests for  right-censored data. The first part provides a thorough  review of current methodologies for assessing goodness of fit in the presence of  right-censored data. The subsequent sections  present the main functions of \pkg{GofCens}  and are  illustrated by means of a right-censored sample from a log-normal distribution and a data set on NBA players' mortality, which is included in the package.
+This paper presents the R package GofCens, which offers graphical tools and implements goodness-of-fit tests for  right-censored data. The first part provides a thorough  review of current methodologies for assessing goodness of fit in the presence of  right-censored data. The subsequent sections  present the main functions of GofCens  and are  illustrated by means of a right-censored sample from a log-normal distribution and a data set on NBA players' mortality, which is included in the package.
 \end{abstract}
 
 \section{Introduction}
