--- a/_articles/RJ-2025-026/RJ-2025-026.Rmd
+++ b/_articles/RJ-2025-026/RJ-2025-026.Rmd
@@ -1,12 +1,12 @@
 ---
-title: '`R` package **GofCens**: Goodness-of-Fit Methods for Right-Censored Data'
+title: 'R package GofCens: Goodness-of-Fit Methods for Right-Censored Data'
 abstract: |
-  This paper presents the `R` package **GofCens**, which offers
+  This paper presents the R package GofCens, which offers
   graphical tools and implements goodness-of-fit tests for
   right-censored data. The first part provides a thorough review of
   current methodologies for assessing goodness of fit in the presence of
   right-censored data. The subsequent sections present the main
-  functions of **GofCens** and are illustrated by means of a
+  functions of GofCens and are illustrated by means of a
   right-censored sample from a log-normal distribution and a data set on
   NBA players' mortality, which is included in the package.
 author:
