RJ-2025-031 plain text title/abstract

--- a/_articles/RJ-2025-031/RJ-2025-031.Rmd
+++ b/_articles/RJ-2025-031/RJ-2025-031.Rmd
@@ -7,7 +7,7 @@ abstract: |
   the disadvantage, however, that it requires knowledge of an
   appropriate scaling factor tau(n) and that the coverage probability
   for finite n depends on the choice of m. This article presents an R
-  package [**moonboot**](https://CRAN.R-project.org/package=moonboot)
+  package moonboot
   which implements the computation of m-out-of-n bootstrap confidence
   intervals and provides functions for estimating the parameters tau(n)
   and m. By means of Monte Carlo simulations, we evaluate the different
@@ -59,7 +59,6 @@ draft: no
 ---
 
 
-::::: article
 ## Introduction
 
 The bootstrap is a resampling method introduced by @efron:1979, which
@@ -868,7 +867,6 @@ simulations.
 
 We thank the anonymous reviewers for their valuable comments and for the
 suggestion to investigate the case when the assumptions are violated.
-:::::
 
 [^1]: This article used version 2.0.x, available, e.g., from
     <https://github.com/cdalitz/moonboot>.
