RJ-2025-031 many fixes

--- a/_articles/RJ-2025-031/RJ-2025-031.Rmd
+++ b/_articles/RJ-2025-031/RJ-2025-031.Rmd
@@ -22,7 +22,7 @@ author:
   - (ORCiD 0000-0002-7004-5584)
   - |
     [christoph.dalitz@hs-niederrhein.de](christoph.dalitz@hs-niederrhein.de){.uri}
-- name: 'Felix '
+- name: 'Felix Lögler'
   affiliation: Niederrhein University of Applied Sciences
   address:
   - Institute for Pattern Recognition
@@ -84,7 +84,7 @@ bootstrap is more versatile because it neither relies on a likelihood
 function, nor does it require asymptotic normality. The bootstrap has
 thus become a standard technique for estimating confidence intervals,
 and it is even included in vanilla R with the package **boot**
-[@R:boot], which implements five different methods in `boot.ci()`.
+[@r:boot], which implements five different methods in `boot.ci()`.
 
 There are, however, bootstrap inconsistent estimators, i.e., estimators
 for which the n-out-of-n bootstrap fails to yield confidence intervals
@@ -438,28 +438,32 @@ $\tau_n$ and a choice for the subsample size $m$. For the cases that
 $\tau_n$ is not known or that $m$ shall be chosen in a data-based way,
 two other functions are provided:
 
-`estimate.tau(data, statistic, R=1000, replace=FALSE, min.m=3,`\
-`             gamma=seq(0.2, 0.7, length.out=5), method="variance", ...)`
+<dl>
+<dt><code>estimate.tau(data, statistic, R=1000, replace=FALSE, min.m=3,<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;gamma=seq(0.2, 0.7, length.out=5), method="variance", ...)</code></dt>
+<dd>
 
-:    \
-    Estimates the scaling factor with the method by @bertail:1999. The
-    values for $m$ are tried out as $m_i=n^{\gamma_i}$. *min.m* is the
-    minimum sample size for which the statistic makes sense and can be
-    computed. The estimation is based on the scaling behavior of the
-    variance (`method="variance"`) or of the quantile ranges
-    (`method="quantile"`).
+Estimates the scaling factor with the method by @bertail:1999. The
+values for $m$ are tried out as $m_i=n^{\gamma_i}$. *min.m* is the
+minimum sample size for which the statistic makes sense and can be
+computed. The estimation is based on the scaling behavior of the
+variance (`method="variance"`) or of the quantile ranges
+(`method="quantile"`).
 
-`estimate.m(data, statistic, tau, R=1000, replace=FALSE, min.m=3,`\
-`           method="bickel", params=NULL, ...)`
+</dd>
+<dt><code>estimate.m(data, statistic, tau, R=1000, replace=FALSE, min.m=3,<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;method="bickel", params=NULL, ...)</code></dt>
+<dd>
 
-:    \
-    Estimates $m$ with the method by [@bickel:2008] (`method="bickel"`),
-    the method by @goetze:2001 (`method="goetze"`), or with the
-    volatility index (`method="politis"`). *params* is a list that can
-    be used to pass additional parameters for the underlying method,
-    e.g. `params=list(q=0.75)` for the method by [@bickel:2008]. *min.m*
-    is the minimum sample size for which the statistic makes sense and
-    can be computed.
+Estimates $m$ with the method by [@bickel:2008] (`method="bickel"`),
+the method by @goetze:2001 (`method="goetze"`), or with the
+volatility index (`method="politis"`). *params* is a list that can
+be used to pass additional parameters for the underlying method,
+e.g. `params=list(q=0.75)` for the method by [@bickel:2008]. *min.m*
+is the minimum sample size for which the statistic makes sense and
+can be computed.
+
+</dd>
+</dl>
+
 
 ### Typical usage
 
