--- a/_articles/RJ-2025-031/moonboot.tex
+++ b/_articles/RJ-2025-031/moonboot.tex
@@ -8,7 +8,7 @@
 \maketitle
 
 \begin{abstract}
-The m-out-of-n bootstrap is a possible workaround to compute confidence intervals for bootstrap inconsistent estimators, because it works under weaker conditions than the n-out-of-n bootstrap. It has the disadvantage, however, that it requires knowledge of an appropriate scaling factor tau(n) and that the coverage probability for finite n depends on the choice of m. This article presents an R package moonboot which implements the computation of m-out-of-n bootstrap confidence intervals and provides functions for estimating the parameters tau(n) and m. By means of Monte Carlo simulations, we evaluate the different methods and compare them for different estimators.
+The m-out-of-n bootstrap is a possible workaround to compute confidence intervals for bootstrap inconsistent estimators, because it works under weaker conditions than the n-out-of-n bootstrap. It has the disadvantage, however, that it requires knowledge of an appropriate scaling factor tau(n) and that the coverage probability for finite n depends on the choice of m. This article presents an R package \CRANpkg{moonboot} which implements the computation of m-out-of-n bootstrap confidence intervals and provides functions for estimating the parameters tau(n) and m. By means of Monte Carlo simulations, we evaluate the different methods and compare them for different estimators.
 \end{abstract}
 
 \section{Introduction}
@@ -84,7 +84,7 @@ This method is implemented in \pkg{moonboot} by \code{estimate.tau()}, which is 
 \begin{figure}[t]
   %\centering
   \begin{tabular}{cc}
-    \includegraphics{fig/volatility-xicor} & \includegraphics{fig/volatility-shorth} \\
+    \includegraphics[width=0.48\linewidth]{fig/volatility-xicor} & \includegraphics[width=0.48\linewidth]{fig/volatility-shorth} \\
     1. xicor & 2. shorth \\
   \end{tabular}
 \caption{\label{fig:volatility}Volatility index after \citet{politis:1999} as a function of $m$ for Chatterjee's correlation ({\em xicor}) and Tukey's shorth for $n=1000$.}
@@ -105,7 +105,7 @@ The methods by \citet{goetze:2001} and \citet{bickel:2008} are both based on min
 \begin{figure}[t]
   %\centering
   \begin{tabular}{cc}
-    \includegraphics{fig/goetze-max-n200-nosmooth} &    \includegraphics{fig/goetze-max-n200-smooth}\\
+    \includegraphics[width=0.48\linewidth]{fig/goetze-max-n200-nosmooth} &    \includegraphics[width=0.48\linewidth]{fig/goetze-max-n200-smooth}\\
     1. single sample & 2. averaged over multiple samples \\
   \end{tabular}
 \caption{\label{fig:goetze-max}Kolmogorov distance between the CDFs of $S^*_m$ and $S^*_{m/2}$ for the estimator of the maximum of a uniform distribution with $n=200$. The left results are for a single sampling per $m$, and the right results for averaging over fivefold sampling.}
@@ -130,10 +130,16 @@ Like in the \pkg{boot} package, the computation of the confidence interval is sp
 
 Calling these functions requires knowledge of the scaling factor $\tau_n$ and a choice for the subsample size $m$. For the cases that $\tau_n$ is not known or that $m$ shall be chosen in a data-based way, two other functions are provided:
 \begin{description}
-\item[{\code{estimate.tau(data, statistic, R=1000, replace=FALSE, min.m=3, \\\ \ \ \ \ \ \ \ \ \ \ \ \ gamma=seq(0.2, 0.7, length.out=5), method="variance", ...)}}] \ \\
+\item[{\parbox[t]{\textwidth}{%
+  \code{estimate.tau(data, statistic, R=1000, replace=FALSE, min.m=3, }\\
+  \hspace*{6.5em}\code{gamma=seq(0.2, 0.7, length.out=5), method="variance", ...)}
+}}] \ \\
   Estimates the scaling factor with the method by \citet{bertail:1999}. The values for $m$ are tried out as $m_i=n^{\gamma_i}$. {\em min.m} is the minimum sample size for which the statistic makes sense and can be computed. The estimation is based on the scaling behavior of the variance (\code{method="variance"}) or of the quantile ranges (\code{method="quantile"}).
 
-\item[{\code{estimate.m(data, statistic, tau, R=1000, replace=FALSE, min.m=3, \\\ \ \ \ \ \ \ \ \ \ \ method="bickel", params=NULL, ...)}}] \ \\
+\item[{\parbox[t]{\textwidth}{%
+  \code{estimate.m(data, statistic, tau, R=1000, replace=FALSE, min.m=3,}\\
+  \hspace*{5.6em}\code{method="bickel", params=NULL, ...)}
+}}] \ \\
   Estimates $m$ with the method by \cite{bickel:2008} (\code{method="bickel"}), the method by \citet{goetze:2001} (\code{method="goetze"}), or with the volatility index (\code{method="politis"}). {\em params} is a list that can be used to pass additional parameters for the underlying method, e.g. \code{params=list(q=0.75)} for the method by \cite{bickel:2008}. {\em min.m} is the minimum sample size for which the statistic makes sense and can be computed.
 \end{description}
 
@@ -230,7 +236,7 @@ For all four estimators, we have evaluated the methods for estimating $\tau_n$ a
 \begin{figure}[b]
   %\centering
   \begin{tabular}{cc}
-  \includegraphics{fig/pcov-fixed-m-shorth} & \includegraphics{fig/pcov-fixed-m-xicor} \\
+  \includegraphics[width=0.48\linewidth]{fig/pcov-fixed-m-shorth} & \includegraphics[width=0.48\linewidth]{fig/pcov-fixed-m-xicor} \\
   {a. shorth} & {b. xicor} \\
   \end{tabular}
 \caption{\label{fig:pcov-fixed}Coverage probability $P_{cov}$ of the m-out-of-n bootstrap without replacement for the choices $m=n^\beta$ with $\beta\in\{\frac{1}{2},\frac{1}{3},\frac{3}{4}\}$. Note that the $n$-axis uses a logarithmic scale.}
@@ -248,9 +254,9 @@ To see how the coverage probability depends on the choice of $m$, we have first 
 %--------------------------------------------------------
 \begin{figure}[t]
   \begin{tabular}{cc}
-    \includegraphics{fig/pcov-databased-m-max} & \includegraphics{fig/pcov-databased-m-shorth}\\
+    \includegraphics[width=0.48\linewidth]{fig/pcov-databased-m-max} & \includegraphics[width=0.48\linewidth]{fig/pcov-databased-m-shorth}\\
     {a. max} & {b. shorth} \\
-    \includegraphics{fig/pcov-databased-m-xicor} &     \includegraphics{fig/pcov-databased-m-mean}\\
+    \includegraphics[width=0.48\linewidth]{fig/pcov-databased-m-xicor} &     \includegraphics[width=0.48\linewidth]{fig/pcov-databased-m-mean}\\
     {c. xicor} & {d. mean}\\
   \end{tabular}
 \caption{\label{fig:pcov-databased}Comparison of the three data based methods for choosing $m$ in the m-out-of-n bootstrap without replacement. The upper plots show the mean value $m(n)$ together with error bars $\pm\operatorname{sd}(m)$ and a least squares fit $\log(m)=\log(cn^\beta)$. The bottom plots show the resulting coverage probabilities. Note that the $n$-axis uses a logarithmic scale.}
@@ -265,7 +271,7 @@ The methods according to \citet{goetze:2001} and \citet{bickel:2008}, on the oth
 \begin{figure}[t]
   %\centering
   \begin{tabular}{cc}
-    \includegraphics{fig/mean-comparison-pcov} &     \includegraphics{fig/mean-comparison-length} \\
+    \includegraphics[width=0.48\linewidth]{fig/mean-comparison-pcov} &     \includegraphics[width=0.48\linewidth]{fig/mean-comparison-length} \\
     {a. coverage probability} & {b. average interval length}\\
   \end{tabular}
 \caption{\label{fig:comparison-noon}Comparison of the m-out-of-n bootstrap without replacement with the ordinary n-out-of-n (basic) bootstrap for the bootstrap consistent estimator {\em mean}. Note that the $n$-axis uses a logarithmic scale.}
