RJ-2025-027 increase figure width to default

--- a/_articles/RJ-2025-027/RJ-2025-027.Rmd
+++ b/_articles/RJ-2025-027/RJ-2025-027.Rmd
@@ -429,7 +429,7 @@ four identical tests and the case of four independent tests, which of
 course is the Bonferroni correction. These are shown in figure 1.
 
 ![Figure 1: Distribution functions of the smallest p value for four
-dependence cases.](figures/fig1.png){#fig:fig1 width="4in"}
+dependence cases.](figures/fig1.png){#fig:fig1}
 
 As one would expect, the two curves for the p values fall between the
 extreme cases of total dependence and independence. Moreover, the curve
@@ -809,7 +809,7 @@ Rgof::plot_power(tmp, "df", "Standard Normal vs t Distributions")
 
 ![Figure 2: Power graph for goodness-of-fit-tests of normal vs t
 distributions, with mean and standard deviation estimated from the
-data.](figures/fig2.png){#fig:fig2 width="4in"}
+data.](figures/fig2.png){#fig:fig2}
 
 *plot_power* has the arguments
 
@@ -853,7 +853,7 @@ Rgof::plot_power(tmp, "lambda", "Poisson vs Mixture of Poisson Distributions")
 
 ![Figure 3: Power graph for goodness-of-fit-tests of Poisson vs a
 mixture of Poisson distributions, with the rate estimated from the
-data.](figures/fig3.png){#fig:fig3 width="4in"}
+data.](figures/fig3.png){#fig:fig3}
 
 ### Two-sample problem - testing {#twosample-problem---testing}
 
@@ -1118,7 +1118,7 @@ R2sample::plot_power(tmp, "df", "Data from Standard Normal vs t Distributions")
 
 ![Figure 4: Power graph for two-sample tests where one data set comes
 from a standard normal distribution and the other from a t
-distribution.](figures/fig4.png){#fig:fig4 width="4in"}
+distribution.](figures/fig4.png){#fig:fig4}
 
 For discrete data we again consider the case of a Poisson random
 variable vs a 50-50 mixture of Poisson random variables:
@@ -1143,7 +1143,7 @@ R2sample::plot_power(tmp, "lambda", "Data from Poisson vs Mixture of Poisson Dis
 
 ![Figure 5: Power graph for two-sample tests where one data set comes
 from Poisson distribution and the other from a mixture of two Poisson
-distributions.](figures/fig5.png){#fig:fig5 width="4in"}
+distributions.](figures/fig5.png){#fig:fig5}
 
 ## Benchmarking
 
@@ -1279,8 +1279,7 @@ ggplot(dta, aes(x=Sunspots)) +
   ggtitle("Sunspots Data")
 ```
 
-![Figure 6: Histogram of sunspots data set.](figures/fig6.png){#fig:fig6
-width="4in"}
+![Figure 6: Histogram of sunspots data set.](figures/fig6.png){#fig:fig6}
 
 ``` r
 pnull = function(x, p=1) pexp(x, p)
@@ -1374,7 +1373,7 @@ data and can handle a number of different situations such as random
 sample sizes and weighted data. The packages also include routines for
 power estimation as well as routines for benchmarking new tests.
 
-## Appendix
+## Appendix {.appendix}
 
 ### Case Studies for Goodness-of-fit Problem
 
@@ -1429,7 +1428,7 @@ The first 14 case studies are the same as those of the goodness-of-fit
 problem. The others are
 
 15. gamma.normal Gamma($\mu$) vs N($\bar{x}$, sd(x)), here the mean of
-    the normal distribution are the sample mean and sample standard
+    the normal distribution are the sample mean and fsample standard
     deviation of the x data set.
 
 16. normal.normalmixture N(0,1) vs N($-\mu$,1)+N($\mu$,1)
