RJ-2025-028 fix figure caption escaping issues

--- a/_articles/RJ-2025-028/RJ-2025-028.Rmd
+++ b/_articles/RJ-2025-028/RJ-2025-028.Rmd
@@ -1224,7 +1224,7 @@ Figure \@ref(fig:rahlfplain).
 <<rahlfplot>>
 ```
 
-(ref:rahlfplainFigCap) The main plot from Figure \@ref(fig:rahlf) without the two columns of text annotation.  This plot is drawn using functions from the `graphics` package.
+(ref:rahlfplainFigCap) The main plot from Figure 6 without the two columns of text annotation.  This plot is drawn using functions from the `graphics` package.
 
 ```{r, rahlfplain, echo=FALSE, fig.width=12, fig.height=9, out.width="100%", fig.cap='(ref:rahlfplainFigCap)'}
 <<rahlfplot>>
@@ -1391,7 +1391,7 @@ The main plot produced by `ggSchneider` is shown in Figure
 ggSchneider
 ```
 
-(ref:schneiderplainFigCap) The main plot from Figure \@ref(fig:schneider) without the annotated mathematical expression. This plot is produced using the packages \CRANpkg{ggplot2} and \CRANpkg{ggtext}.
+(ref:schneiderplainFigCap) The main plot from Figure 8 without the annotated mathematical expression. This plot is produced using the packages ggplot2 and ggtext.
 
 ```{r, schneiderplain, echo=FALSE, out.width="100%", fig.cap='(ref:schneiderplainFigCap)'}
 ggSchneider
@@ -1587,7 +1587,7 @@ The main plot produced by `ggANZJS` is shown in Figure \@ref(fig:anzjsplain).
 ggANZJS
 ```
 
-(ref:anzjsplainFigCap) The main plot from Figure \@ref(fig:anzjs) without the numbered list items as annotations.  This plot is produced using the \CRANpkg{ggplot2} package.
+(ref:anzjsplainFigCap) The main plot from Figure 10 without the numbered list items as annotations.  This plot is produced using the ggplot2 package.
 
 ```{r, anzjsplain, echo=FALSE, fig.width=8, fig.height=4.5, out.width="100%", fig.cap='(ref:anzjsplainFigCap)'}
 ggANZJS
@@ -1741,7 +1741,7 @@ Figure \@ref(fig:latticeplain).
 latticeCrime
 ```
 
-(ref:latticeplainFigCap) The main plot from Figure \@ref(fig:lattice) without the title and annotations in each panel.  This plot is produced using the \CRANpkg{lattice} package.
+(ref:latticeplainFigCap) The main plot from Figure 12 without the title and annotations in each panel.  This plot is produced using the lattice package.
 
 ```{r latticeplain, echo=FALSE, fig.width=7, fig.height=7, fig.keep="last", out.width="100%", fig.cap='(ref:latticeplainFigCap)'}
 latticeCrime
