RJ-2025-029 fix figure sizing

--- a/_articles/RJ-2025-029/RJ-2025-029.Rmd
+++ b/_articles/RJ-2025-029/RJ-2025-029.Rmd
@@ -668,8 +668,7 @@ reasonable choice for the analysis of such data.
 
 <figure id="Figure1">
 <div class="center">
-<img src="qqplot.png" style="width:65.0%"
-alt="graphic without alt text" />
+<img src="qqplot.png" alt="graphic without alt text" />
 </div>
 <figcaption>Figure 2: <span style="color: black">Labor pain data. Linear
 mixed effect model with Gaussian random intercepts. Normal probability
@@ -1377,13 +1376,13 @@ returns instead the variance-covariance matrix of fixed model parameters
 obtained from the block-bootstrap procedure detailed above.
 
 <figure id="fig:plot">
-<img src="figplot.png" style="width:100.0%"
+<img src="figplot_1.png" style="width:30.0%"
 alt="graphic without alt text" />
-<img src="figplot.png" style="width:100.0%"
+<img src="figplot_2.png" style="width:30.0%"
 alt="graphic without alt text" />
-<p><img src="figplot.png" style="width:100.0%"
-alt="graphic without alt text" /> <span id="fig:plot"
-data-label="fig:plot"></span></p>
+<img src="figplot_3.png" style="width:30.0%"
+alt="graphic without alt text" /> 
+<span id="fig:plot" data-label="fig:plot"></span>
 <figcaption>Figure 3: Results from the <code>plot</code>
 method</figcaption>
 </figure>
