RJ-2025-030 Fix author name

--- a/_articles/RJ-2025-030/RJ-2025-030.Rmd
+++ b/_articles/RJ-2025-030/RJ-2025-030.Rmd
@@ -30,7 +30,7 @@ author:
   - Faculty of Biology
   - Münster, Germany
   email: juliusrublack@web.de
-- name: Stefan Rödiger (corresponding author)
+- name: Stefan Rödiger
   affiliation: Brandenburg University of Technology Cottbus - Senftenberg
   address:
   - Institute of Biotechnology
